# trpo

./: .github-ci.yml  README.md  build.bat  build.sh  checkstyle.xml  pom.xml
.github/workflows/: .github-ci.yml
c_example/: 08_stack_tests.cpp  CMakeLists.txt  stack.c
src/main/java/ru/cinquecento/: App.java  Node.java  Stack.java
src/test/java/ru/cinquecento/: StackTest.java
src/test/java/ru/cinquecento/benchmark/: BenchmarkRunner.java  StackBenchmark.java
